objects/BMCServiceDesk__SRM_ProcessTemplate__c.object
<CustomObject>
    <description>Stores the processes required to fulfill a service request.</description>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
        <label>Request Definition</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
        <relationshipLabel>ProcessTemplates</relationshipLabel>
        <relationshipName>ProcessTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <label>Template</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>ProcessTemplates</relationshipLabel>
        <relationshipName>ProcessTemplates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__orderNumber__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Template</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Process Template #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProcessTemplates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>